--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div id="header">
       <h1>This is a website.<h1>
         <ul id="navbar">
-          <a href="this is not a button.html">
+          <a href="this-is-not-a-button.html">
             <li>This is  a button.</li>
         </ul>
     </div>
