--- a/index.html
+++ b/index.html
@@ -18,3 +18,21 @@
     <script src="script.js"></script>
   </body>
 </html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+
+    <div id="header">
+        <ul id="navbar">
+          <a href="this is not a button.html">
+        </ul>
+    </div>
+
+<p>Look at what you've done.</p>
+
+    <script src="script.js"></script>
+  </body>
+</html>
