--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 
-    <div id="header">
+    <div id="header" onclick="changeColor()">
       <h1>This is a website.<h1>
         <ul id="navbar">
           <a href="this-is-not-a-button.html">
