--- a/this-is-not-a-button.html
+++ b/this-is-not-a-button.html
@@ -12,7 +12,7 @@
     </div>
 
 <p>Look at what you've done.</p>
-
+<img class="pic" src="Photos/charged_creeper.png">
     <script src="script.js"></script>
   </body>
 </html>
