--- a/this-is-not-a-button.html
+++ b/this-is-not-a-button.html
@@ -16,4 +16,4 @@
     <script src="script.js"></script>
   </body>
 </html>
-  <p>This creeper will blow up your diamonds</p>
+  <p>Now choose what this creeper will blow up</p>
