--- a/this-is-not-a-button.html
+++ b/this-is-not-a-button.html
@@ -11,7 +11,8 @@
         </ul>
     </div>
 
-<p>Look at what you've done. Now choose what this creeper will blow up.</p>
+<p>Look at what you've done.</p>
+<p>Now choose what this creeper will blow up.</p> 
 <img class="pic" src="Photos/charged_creeper.png">
     <script src="script.js"></script>
   </body>
