--- a/this-is-not-a-button.html
+++ b/this-is-not-a-button.html
@@ -8,6 +8,8 @@
     <div id="header">
         <ul id="navbar">
           <a href="this is not a button.html">
+          <a href="your-netherite"><li>Your netherite.</li></a> 
+          <a href="your-diamonds"><li>Your diamonds.</li></a>
         </ul>
     </div>
 
