--- a/this-is-not-a-button.html
+++ b/this-is-not-a-button.html
@@ -8,8 +8,8 @@
     <div id="header">
         <ul id="navbar">
           <a href="this is not a button.html">
-          <a href="your-diamonds.html"><li>Your diamonds.</li></a>
-          <a href="your-netherite.html"><li>Your netherite.</li></a>
+          <a href="your diamonds.html"><li>Your diamonds.</li></a>
+          <a href="your netherite.html"><li>Your netherite.</li></a>
         </ul>
     </div>
 
