--- a/you-diamonds.html
+++ b/you-diamonds.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
 
+    <div id="header">
+        <ul id="navbar">
+          <a href="this is not a button.html">
+        </ul>
+    </div>
+
+<p>You have chosen netherite. This creeper will blow up your diamonds.</p>
+
+    <script src="script.js"></script>
+  </body>
+</html>
