--- a/you-diamonds.html
+++ b/you-diamonds.html
@@ -11,7 +11,7 @@
         </ul>
     </div>
 
-<p>You have chosen netherite. This creeper will blow up your diamonds.</p>
+<p>You have chosen diamonds. This creeper will blow up your diamonds.</p>
 
     <script src="script.js"></script>
   </body>
