--- a/your-netherite.html
+++ b/your-netherite.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    
+    <p>You have chosen netherite. This creeper will blow up your netherite.</p>
+    <div id="header">
+        <ul id="navbar">
+          <a href="this is not a button.html">
+        </ul>
+    </div>
 
+    <script src="script.js"></script>
+  </body>
+</html>
