--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </ul>
     </div>
     
-        <p>Don't click on the button, because this website will disappear if you do.</p>
+        <p id="hello">Don't click on the button, because this website will disappear if you do.</p>
 
     <script>
       function changeColor() {
