--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <body>
     
     <div id="header" onclick="changeColor()">
-      <h1>This is a website.<h1>
+      <h1>Worning: doo not click on the red button because you will loos yor dimunds and netherit in mincraft if yoo doo.<h1>
         <ul id="navbar">
           <a href="this-is-not-a-button.html">
-            <li>This is  a button.</li>
+            <li></li>
         </ul>
     </div>
     
-        <p>Don't click on the button, because this website will disappear if you do.</p>
+        <p>Plees reed du falloing worning</p>
 
     <script>
       function changeColor() {
