--- a/your-netherite.html
+++ b/your-netherite.html
@@ -6,9 +6,10 @@
   <body>
     
     <p>You have chosen netherite. This creeper will blow up your netherite.</p>
+    
     <div id="header">
         <ul id="navbar">
-          <a href="this is not a button.html">
+          <a href="this-is-not-a-button.html">
         </ul>
     </div>
 
