--- a/your-diamonds.html
+++ b/your-diamonds.html
@@ -7,7 +7,7 @@
 
     <div id="header">
         <ul id="navbar">
-          <a href="this is not a button.html">
+          <a href="this-is-not-a-button.html">
         </ul>
     </div>
 
