--- a/your-diamonds.html
+++ b/your-diamonds.html
@@ -5,11 +5,11 @@
   </head>
   <body>
     
-    <p>You have chosen diamonds. This creeper will blow up your diamonds.</p>
+        <p>You have chosen diamonds. This creeper will blow up your diamonds.</p>
 
     <div id="header">
         <ul id="navbar">
-          <a href="this-is-not-a-button.html">
+          <a href="this-is-not-a-button.html"></a>
         </ul>
     </div>
 
