--- a/your-netherite.html
+++ b/your-netherite.html
@@ -9,7 +9,7 @@
     
     <div id="header">
         <ul id="navbar">
-          <a href="this-is-not-a-button.html">
+          <a href="this-is-not-a-button.html"></a>
         </ul>
     </div>
 
