--- a/this-is-not-a-button.html
+++ b/this-is-not-a-button.html
@@ -10,7 +10,7 @@
     
     <div id="header">
         <ul id="navbar">
-          <a href="this-is-not-a-button.html">
+          <a href="this-is-not-a-button.html"></a>
           <a href="your-diamonds.html"><li>Your diamonds.</li></a>
           <a href="your-netherite.html"><li>Your netherite.</li></a>
         </ul>
