--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   </head>
   <body>
     
-      <p>Plees reed du falloing worning</p>
+      <p>Pleez reed du falloing worning</p>
     
     <div id="header" onclick="changeColor()">
-      <h1>Worning: doo not click on the red button because you will loos yor dimunds and netherit in mincraft if yoo doo.<h1>
+      <h1>Worning: doo not klik on du red dot beecuz yoo wil looz yor dimunds and netherit in mincraft if yoo doo.<h1>
         <ul id="navbar">
           <a href="this-is-not-a-button.html">
             <li></li></a>
