--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       <p>Pleez reed du falloing worning</p>
     
     <div id="header" onclick="changeColor()">
-      <h1>Worning: doo not klik on du red dot beecuz yoo wil looz yor dimunds and netherit in mincraft if yoo doo.<h1>
+      <h1>Worning: doo not klik on du red dot beecuz yoo wil looz yor dimunds and netherite in mincraft if yoo doo.<h1>
         <ul id="navbar">
           <a href="this-is-not-a-button.html">
             <li></li></a>
-          <a href="minecraft.html"><li>What is netherite?</li></a>
+          <a href="minecraft.html"><li>Wut iz netherite?</li></a>
         </ul>
     </div>
 
