--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul id="navbar">
           <a href="this-is-not-a-button.html">
             <li></li></a>
+          <a href="you-found-a-secret.html><li><-red dot</li></a>
           <a href="minecraft.html"><li>Wut iz netherite?</li></a>
         </ul>
     </div>
