--- a/minecraft.html
+++ b/minecraft.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
 
+<img class="pic" src="https://pbs.twimg.com/media/EcBlIdIX0AEsbqG.png">
+    <script src="script.js"></script>
+  </body>
+</html>
