--- a/minecraft.html
+++ b/minecraft.html
@@ -10,3 +10,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+<p>smelting ancient debris will give you netherite scraps, which can be crafted into netherite ingots when four of them are combined with four golden ingots. Nine of these can be crafted into netherite blocks, which can be used to activate beacons. Or, you can combine them with any diamond tool or armor to turn them into netherite tools and armor.</p>
