--- a/game.html
+++ b/game.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    
+    
+    <div id="header" onclick="changeColor()">
+          <a href=""><li>Game.</li></a>
+    </div>
 
+    <script>
+    </script>
+    <script src="script.js"></script>
+  </body>
+</html>
