--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     
     
     <div id="header" onclick="changeColor()">
-          <a href=""><li>Game.</li></a>
+          <a href="https://hyoinyoonisawesome.github.io/flappyfighter/"><li>Game.</li></a>
     </div>
 
     <script>
