--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     
+    <p>Congratulations!You found a secret!</p>
     
     <div id="header" onclick="changeColor()">
           <a href="https://hyoinyoonisawesome.github.io/flappyfighter/"><li>Game.</li></a>
