--- a/this-is-not-a-button.html
+++ b/this-is-not-a-button.html
@@ -6,7 +6,7 @@
   <body>
 
 <p>Look at what you've done.</p>
-<p>Now choose what this creeper will blow up.</p> 
+<p>Now choose what you will loose in minecraft.</p> 
     
     <div id="header">
         <ul id="navbar">
@@ -15,8 +15,7 @@
           <a href="your-netherite.html"><li>Your netherite.</li></a>
         </ul>
     </div>
-
-<img class="pic" src="Photos/charged_creeper.png">
+    
     <script src="script.js"></script>
   </body>
 </html>
